// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Openapi V2 |> renderDefinitionCode should render 1 1`] = `
"/**
 * Do not edit this file it is auto-generated by io-utils / gen-api-models.
 * See https://github.com/pagopa/io-utils
 */
/* eslint-disable  */

import { MessageContent } from \\"./MessageContent\\";
import * as t from \\"io-ts\\";

// required attributes
const MessageR = t.interface({
  id: t.string,

  content: MessageContent
});

// optional attributes
const MessageO = t.partial({
  sender_service_id: t.string
});

export const Message = t.exact(t.intersection([MessageR, MessageO], \\"Message\\"));

export type Message = t.TypeOf<typeof Message>;
"
`;

exports[`Openapi V2 |> renderDefinitionCode should render 2 1`] = `
"/**
 * Do not edit this file it is auto-generated by io-utils / gen-api-models.
 * See https://github.com/pagopa/io-utils
 */
/* eslint-disable  */

import * as t from \\"io-ts\\";

// required attributes
const DefinitionFieldWithDashR = t.interface({});

// optional attributes
const DefinitionFieldWithDashO = t.partial({
  \\"id-field\\": t.string
});

export const DefinitionFieldWithDash = t.exact(
  t.intersection(
    [DefinitionFieldWithDashR, DefinitionFieldWithDashO],
    \\"DefinitionFieldWithDash\\"
  )
);

export type DefinitionFieldWithDash = t.TypeOf<typeof DefinitionFieldWithDash>;
"
`;

exports[`Openapi V3 |> renderDefinitionCode should render 1 1`] = `
"/**
 * Do not edit this file it is auto-generated by io-utils / gen-api-models.
 * See https://github.com/pagopa/io-utils
 */
/* eslint-disable  */

import { MessageContent } from \\"./MessageContent\\";
import * as t from \\"io-ts\\";

// required attributes
const MessageR = t.interface({
  id: t.string,

  content: MessageContent
});

// optional attributes
const MessageO = t.partial({
  sender_service_id: t.string
});

export const Message = t.exact(t.intersection([MessageR, MessageO], \\"Message\\"));

export type Message = t.TypeOf<typeof Message>;
"
`;

exports[`Openapi V3 |> renderDefinitionCode should render 2 1`] = `
"/**
 * Do not edit this file it is auto-generated by io-utils / gen-api-models.
 * See https://github.com/pagopa/io-utils
 */
/* eslint-disable  */

import * as t from \\"io-ts\\";

// required attributes
const DefinitionFieldWithDashR = t.interface({});

// optional attributes
const DefinitionFieldWithDashO = t.partial({
  \\"id-field\\": t.string
});

export const DefinitionFieldWithDash = t.exact(
  t.intersection(
    [DefinitionFieldWithDashR, DefinitionFieldWithDashO],
    \\"DefinitionFieldWithDash\\"
  )
);

export type DefinitionFieldWithDash = t.TypeOf<typeof DefinitionFieldWithDash>;
"
`;
